plugins {
    id 'java'
}

allprojects {
    apply plugin: 'java'

    group = 'dev.vini2003'
    version = '1.0-SNAPSHOT'

    sourceCompatibility = '11'
    targetCompatibility = '11'

    repositories {
        mavenCentral()
    }

    dependencies {
        implementation("org.jetbrains:annotations:${jetbrainsAnnotationsVersion}")

        implementation("com.github.javafaker:javafaker:${javaFakerVersion}")

        testImplementation(platform("org.junit:junit-bom:${junitBomVersion}"))
        testImplementation("org.junit.jupiter:junit-jupiter-api")

        testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
    }

    compileJava {
        options.fork = true
        options.forkOptions.javaHome = file("${System.properties['java.home']}")
    }

    compileTestJava {
        options.fork = true
        options.forkOptions.javaHome = file("${System.properties['java.home']}")
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(11)
        }
    }

    tasks.withType(JavaExec) {
        jvmArgs '--enable-preview'
    }

    test {
        useJUnitPlatform()
    }
}
